fixed spacing issue on cart

--- a/solution-hw1/style.css
+++ b/solution-hw1/style.css
@@ -40,15 +40,13 @@
 #shopping-cart,
 .product-shopping-cart,
 .nav,
-#choices,
-.product-details-shopping-cart {
+#choices {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
 }
 
-/* adding margin to nav */
 .nav {
   margin-bottom: 30px;
 }
@@ -67,10 +65,16 @@
   padding: 10px;
 }
 
-/* getting rid of padding and margin between product details on shopping cart page */
+/* getting rid of padding and margin between product details on shopping cart page, centering text and making line height smaller than default */
 .product-details-shopping-cart {
   margin: 0px;
-  padding: 0px;
+  padding-bottom: 40px;
+  text-align: center;
+  line-height: 5px;
+}
+
+.price-detail-shopping-cart {
+  margin-top: 40px;
 }
 
 /* TEXT AND FONT  */
@@ -87,14 +91,16 @@ a {
 /* changing font */
 p,
 a,
-h1 {
+h1,
+h2 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: black;
 }
 
 /* changing weight and sizes of font */
-h1 {
+h1,
+h2 {
   font-weight: normal;
 }
 
